fixing some spacing

--- a/web/css/lc.css
+++ b/web/css/lc.css
@@ -1,7 +1,7 @@
 #qc {
 	width:960px;
 	min-height: 70px;
-	margin:25px auto 10px;
+	margin:15px auto 10px;
 	text-align: center;
 }
 #qc svg {
